Update hints and footer in index.html for improved user guidance

--- a/index.html
+++ b/index.html
@@ -356,14 +356,12 @@
         </div>
       </div>
 
-      <div class="hint">
-        If you open this file directly (double-click), some browsers may block downloads for local files.
-        If that happens, run a local server in this folder (example): <span style="font-family: var(--mono)">python -m http.server</span> and open <span style="font-family: var(--mono)">http://localhost:8000</span>.
-      </div>
+        <div class="hint">
+            Hint: If the downloads do not start, try right-clicking the "Download" button and selecting "Save link as..." or "Download linked file as...".
     </main>
 
     <footer>
-      Tip: Keep this <span style="font-family: var(--mono)">index.html</span> in the same folder as the .py files so the links stay valid.
+      Developed by Your Nihan. &copy; 2024.
     </footer>
   </div>
 </body>
