Add new card-long component for enhanced file display and download options

--- a/index.html
+++ b/index.html
@@ -107,6 +107,16 @@
       gap: 10px;
     }
 
+    .card-long {
+      grid-column: span 12;
+      padding: 14px;
+      border-radius: var(--radius-sm);
+      border: 1px solid var(--border);
+      background: rgba(255, 255, 255, 0.03);
+      display: grid;
+      width: 100%;
+    }
+
     @media (min-width: 720px) {
       .card { grid-column: span 6; }
     }
@@ -354,6 +364,17 @@
             <a class="btn" href="15_convert_odd_to_even_by_adding_1.py" download>Download</a>
           </div>
         </div>
+
+        <div class="card-long" role="listitem">
+          <div class="row">
+            <div class="file">
+              <div class="name">All Files.</div>
+              <div class="meta"></div>
+            </div>
+            <a class="btn" href="01_sum_and_product_of_two_numbers.py, 02_area_of_circle.py, 03_area_of_triangle.py, 04_area_of_rectangle.py, 05_area_of_square.py, 06_area_of_trapezoid.py, 07_swap_two_variables.py, 08_celsius_to_fahrenheit.py, 09_two_raised_to_power_x.py, 10_concatenate_two_lists.py, 11_append_value_to_existing_list.py, 12_extract_specific_elements_from_array.py, 13_list_operations_create_append_extend_remove.py, 14_display_names_with_length_four.py, 15_convert_odd_to_even_by_adding_1.py" download>Download</a>
+          </div>
+        </div>
+
       </div>
 
         <div class="hint">
