Update download link in index.html and add files.zip containing Python exercises

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
               <div class="name">All Files.</div>
               <div class="meta"></div>
             </div>
-            <a class="btn" href="01_sum_and_product_of_two_numbers.py, 02_area_of_circle.py, 03_area_of_triangle.py, 04_area_of_rectangle.py, 05_area_of_square.py, 06_area_of_trapezoid.py, 07_swap_two_variables.py, 08_celsius_to_fahrenheit.py, 09_two_raised_to_power_x.py, 10_concatenate_two_lists.py, 11_append_value_to_existing_list.py, 12_extract_specific_elements_from_array.py, 13_list_operations_create_append_extend_remove.py, 14_display_names_with_length_four.py, 15_convert_odd_to_even_by_adding_1.py" download>Download</a>
+            <a class="btn" href="files.zip" download>Download</a>
           </div>
         </div>
 
