Add robots.txt and sitemap.xml for SEO optimization
- Created robots.txt to allow all user agents and specify the sitemap location.
- Added sitemap.xml with the homepage URL, last modified date, change frequency, and priority.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="favicon.ico" />
   <meta name="color-scheme" content="light dark" />
-  <title>Downloads</title>
+  <meta name="description" content="Download Python Class 10th files: all important Python exercises, solutions, and sample programs for Class 10 students. Free PDF and .py files for CBSE, ICSE, and other boards." />
+  <meta name="keywords" content="python class 10th files, class 10 python exercises, python files for class 10, cbse python class 10, icse python class 10, python programs for class 10, python solutions class 10, download python class 10" />
+  <title>Python Class 10th Files – Download Exercises, Solutions & Programs</title>
+  <link rel="canonical" href="https://py.nihan-vp.me" />
+  <meta property="og:title" content="Python Class 10th Files – Download Exercises, Solutions & Programs" />
+  <meta property="og:description" content="Download Python Class 10th files: all important Python exercises, solutions, and sample programs for Class 10 students. Free PDF and .py files for CBSE, ICSE, and other boards." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://py.nihan-vp.me" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "EducationalOccupationalProgram",
+    "name": "Python Class 10th Files",
+    "description": "Download all Python Class 10th files, exercises, and solutions for CBSE, ICSE, and other boards. Free PDF and .py files for students.",
+    "educationalLevel": "Secondary",
+    "provider": {
+      "@type": "Organization",
+      "name": "Your Nihan"
+    },
+    "inLanguage": "Python"
+  }
+  </script>
   <style>
     :root {
       --bg: #0b1220;
@@ -208,12 +231,13 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Python Exercises — Downloads</h1>
-      <p class="sub">Click “Download” to save each file. This page works best when opened via a local server so the browser can download files correctly.</p>
-      <div class="badge"><span class="dot" aria-hidden="true"></span><span>15 files</span></div>
+      <h1>Python Class 10th Files – Download Exercises, Solutions & Programs</h1>
+      <p class="sub">Download all important Python files for Class 10: exercises, solutions, and sample programs for CBSE, ICSE, and other boards. Perfect for Class 10th students and teachers.</p>
+      <div class="badge"><span class="dot" aria-hidden="true"></span><span>15 Python Class 10th files</span></div>
     </header>
 
     <main>
+      <h2>Download Python Class 10th Files</h2>
       <div class="grid" role="list">
         <div class="card" role="listitem">
           <div class="row">
@@ -382,7 +406,7 @@
     </main>
 
     <footer>
-      Developed by Your Nihan. &copy; 2026.
+      <strong>Python Class 10th Files</strong> – Developed by Your Nihan. &copy; 2026. All rights reserved.
     </footer>
   </div>
 </body>
