Remove outdated Python exercises and update download links in index.html

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               <div class="name">01_sum_and_product_of_two_numbers.py</div>
               <div class="meta">Exercise 01</div>
             </div>
-            <a class="btn" href="01_sum_and_product_of_two_numbers.py" download>Download</a>
+            <a class="btn" href="Downloadable files/01_sum_and_product_of_two_numbers.py" download>Download</a>
           </div>
         </div>
 
@@ -255,7 +255,7 @@
               <div class="name">02_area_and_perimeter_of_a_rectangle.py</div>
               <div class="meta">Exercise 02</div>
             </div>
-            <a class="btn" href="02_area_and_perimeter_of_a_rectangle.py" download>Download</a>
+            <a class="btn" href="Downloadable files/02_area_and_perimeter_of_a_rectangle.py" download>Download</a>
           </div>
         </div>
 
@@ -265,7 +265,7 @@
               <div class="name">03_sum_and_average_of_n_numbers.py</div>
               <div class="meta">Exercise 03</div>
             </div>
-            <a class="btn" href="03_sum_and_average_of_n_numbers.py" download>Download</a>
+            <a class="btn" href="Downloadable files/03_sum_and_average_of_n_numbers.py" download>Download</a>
           </div>
         </div>
 
@@ -275,7 +275,7 @@
               <div class="name">04_check_even_or_odd.py</div>
               <div class="meta">Exercise 04</div>
             </div>
-            <a class="btn" href="04_check_even_or_odd.py" download>Download</a>
+            <a class="btn" href="Downloadable files/04_check_even_or_odd.py" download>Download</a>
           </div>
         </div>
 
@@ -285,7 +285,7 @@
               <div class="name">05_count_10_to_1_using_while_loop.py</div>
               <div class="meta">Exercise 05</div>
             </div>
-            <a class="btn" href="05_count_10_to_1_using_while_loop.py" download>Download</a>
+            <a class="btn" href="Downloadable files/05_count_10_to_1_using_while_loop.py" download>Download</a>
           </div>
         </div>
 
@@ -295,7 +295,7 @@
               <div class="name">06_square_of_first_3_natural_numbers.py</div>
               <div class="meta">Exercise 06</div>
             </div>
-            <a class="btn" href="06_square_of_first_3_natural_numbers.py" download>Download</a>
+            <a class="btn" href="Downloadable files/06_square_of_first_3_natural_numbers.py" download>Download</a>
           </div>
         </div>
 
@@ -305,7 +305,7 @@
               <div class="name">07_swap_two_variables.py</div>
               <div class="meta">Exercise 07</div>
             </div>
-            <a class="btn" href="07_swap_two_variables.py" download>Download</a>
+            <a class="btn" href="Downloadable files/07_swap_two_variables.py" download>Download</a>
           </div>
         </div>
 
@@ -315,7 +315,7 @@
               <div class="name">08_celsius_to_fahrenheit.py</div>
               <div class="meta">Exercise 08</div>
             </div>
-            <a class="btn" href="08_celsius_to_fahrenheit.py" download>Download</a>
+            <a class="btn" href="Downloadable files/08_celsius_to_fahrenheit.py" download>Download</a>
           </div>
         </div>
 
@@ -325,7 +325,7 @@
               <div class="name">09_two_raised_to_power_x.py</div>
               <div class="meta">Exercise 09</div>
             </div>
-            <a class="btn" href="09_two_raised_to_power_x.py" download>Download</a>
+            <a class="btn" href="Downloadable files/09_two_raised_to_power_x.py" download>Download</a>
           </div>
         </div>
 
@@ -335,7 +335,7 @@
               <div class="name">10_concatenate_two_lists.py</div>
               <div class="meta">Exercise 10</div>
             </div>
-            <a class="btn" href="10_concatenate_two_lists.py" download>Download</a>
+            <a class="btn" href="Downloadable files/10_concatenate_two_lists.py" download>Download</a>
           </div>
         </div>
 
@@ -345,7 +345,7 @@
               <div class="name">11_append_value_to_existing_list.py</div>
               <div class="meta">Exercise 11</div>
             </div>
-            <a class="btn" href="11_append_value_to_existing_list.py" download>Download</a>
+            <a class="btn" href="Downloadable files/11_append_value_to_existing_list.py" download>Download</a>
           </div>
         </div>
 
@@ -355,7 +355,7 @@
               <div class="name">12_extract_specific_elements_from_array.py</div>
               <div class="meta">Exercise 12</div>
             </div>
-            <a class="btn" href="12_extract_specific_elements_from_array.py" download>Download</a>
+            <a class="btn" href="Downloadable files/12_extract_specific_elements_from_array.py" download>Download</a>
           </div>
         </div>
 
@@ -365,7 +365,7 @@
               <div class="name">13_list_operations_create_append_extend_remove.py</div>
               <div class="meta">Exercise 13</div>
             </div>
-            <a class="btn" href="13_list_operations_create_append_extend_remove.py" download>Download</a>
+            <a class="btn" href="Downloadable files/13_list_operations_create_append_extend_remove.py" download>Download</a>
           </div>
         </div>
 
@@ -375,7 +375,7 @@
               <div class="name">14_display_names_with_length_four.py</div>
               <div class="meta">Exercise 14</div>
             </div>
-            <a class="btn" href="14_display_names_with_length_four.py" download>Download</a>
+            <a class="btn" href="Downloadable files/14_display_names_with_length_four.py" download>Download</a>
           </div>
         </div>
 
@@ -385,7 +385,7 @@
               <div class="name">15_convert_odd_to_even_by_adding_1.py</div>
               <div class="meta">Exercise 15</div>
             </div>
-            <a class="btn" href="15_convert_odd_to_even_by_adding_1.py" download>Download</a>
+            <a class="btn" href="Downloadable files/15_convert_odd_to_even_by_adding_1.py" download>Download</a>
           </div>
         </div>
 
@@ -395,7 +395,7 @@
               <div class="name">All Files.</div>
               <div class="meta"></div>
             </div>
-            <a class="btn" href="files.zip" download>Download</a>
+            <a class="btn" href="Downloadable files/files.zip" download>Download</a>
           </div>
         </div>
 
