--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       --border: rgba(255, 255, 255, 0.14);
       --primary: #60a5fa;
       --primary-2: #93c5fd;
+      --primary-3: rgba(255, 255, 255, 0.70);
       --shadow: 0 20px 60px rgba(0, 0, 0, 0.45);
       --radius: 16px;
       --radius-sm: 12px;
@@ -71,6 +72,11 @@
         radial-gradient(900px 600px at 85% 0%, rgba(147, 197, 253, 0.18), transparent 60%),
         radial-gradient(900px 600px at 60% 90%, rgba(99, 102, 241, 0.16), transparent 60%),
         var(--bg);
+    }
+
+    .foot {
+        color: var(--primary-3);
+        text-decoration: none;
     }
 
     .wrap {
@@ -406,7 +412,7 @@
     </main>
 
     <footer>
-      <strong>Python Class 10th Files</strong> – Developed by Your Nihan. &copy; 2026. All rights reserved.
+      <strong>Python Class 10th Files</strong> – Developed by <a href="www.nihan-vp.me" class="foot" >Nihan</a>. &copy; 2026. All rights reserved.
     </footer>
   </div>
 </body>
