Update favicon link to use the correct path in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="public/favicon.ico" />
   <meta name="color-scheme" content="light dark" />
   <meta name="description" content="Download Python Class 10th files: all important Python exercises, solutions, and sample programs for Class 10 students. Free PDF and .py files for CBSE, ICSE, and other boards." />
   <meta name="keywords" content="python class 10th files, class 10 python exercises, python files for class 10, cbse python class 10, icse python class 10, python programs for class 10, python solutions class 10, download python class 10" />
